<resources>
    <string name="app_name">Sample Udacity App</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="media_streamer">SPOTIFY STREAMER</string>
    <string name="super_duo1">SCORES APP</string>
    <string name="super_duo2">LIBRARY APP</string>
    <string name="ant_terminator">BUILD IT BIGGER</string>
    <string name="materialize">XYZ READER</string>
    <string name="capstone">CAPSTONE: My Own APP</string>
</resources>
